# equity-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: data_limitations.md  phase3_plan.md
equity_research/: config.py  db.py
equity_research/analytics/: cross_section.py  factors.py  ratios.py  screens.py
equity_research/ingestion/: fundamentals.py  prices.py  universe.py
equity_research/templates/: tearsheet.html
scripts/: build_tearsheet.py  ingest_benchmarks.py  ingest_fundamentals.py  ingest_prices.py  ingest_universe.py  run_magic_formula.py  screen_comparison.py
tests/: conftest.py  test_db.py  test_fundamentals.py  test_phase3.py  test_prices.py
