[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-research"
version = "0.1.0"
requires-python = ">=3.10"
# Research project — minimum-version pins only; upgrades are tolerated.
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["equity_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
